--- a/styles.css
+++ b/styles.css
@@ -396,15 +396,21 @@ footer{
 }
 
 @media (max-width: 768px) {
+    html,
     body {
-        margin: 5px 30px;
-        margin-right: 25px;
+        width: 100%;
+        height: 100%;
+    }
+
+    body {
+        margin: 5px 0;
     }
 
     h1{
         text-align: center;
         font-size: 35px;
         margin: 10px 0;
+        margin-left: 20px;
     }
 
     .hero-section,
@@ -414,7 +420,15 @@ footer{
     .drinks,
     .location,
     .contact-us {
-        margin: 10% 0;
+        margin: 12% 0;
+    }
+
+    .smush-item, .chicken-item, .dessert-item, .location{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
     .hero-row {
@@ -423,7 +437,7 @@ footer{
     }
 
     .left-col button {
-        margin: 20px auto;
+        margin: auto;
         display: block;
     }
 
@@ -436,7 +450,6 @@ footer{
     }
 
     .smush-item, .chicken-item{
-        margin: auto;
         margin-left: 10px;
     }
 
@@ -451,6 +464,18 @@ footer{
         display: none;
     }
 
+    .fries{
+        margin: 0 10%;
+    }
+
+    .fries-item, .location, .contact-us, .hero-section{
+        margin-left: 12px;
+    }
+
+    .fries-item img{
+        width: 50%;
+    }
+
     .dessert {
         text-align: center;
     }
@@ -460,12 +485,23 @@ footer{
         height: 150px;
     }
 
+    .dessert p{
+        max-width: 200px;
+        text-align: center;
+    }
+
     .drinks-grid {
         grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        margin-left: 3%;
     }
 
     .location p, .contact-us p{
         text-align: center;
+    }
+    
+    .location iframe{
+        width: 80%;
+        height: 350px;
     }
 
     .contact-left-col h1{
@@ -486,9 +522,12 @@ footer{
     }
 
     nav ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         gap: 15px;
-        padding-right: 90px;
-        margin-top: -10px;
+        padding-right: 10px;
+        margin-top: -15px;
     }
 
     nav ul li a {
@@ -497,11 +536,13 @@ footer{
 
     header a img {
         height: 80px;
+        padding-left: 10px;
     }
 
     footer p{
         font-size: 10px;
         font-weight: 400;
+        padding-bottom: 10px;
     }
 
     .smush-burgers h1,
